--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,9 +12,10 @@ h1 {
     font-size: 50px;
     font-weight: 600;
     color: rgb(66, 66, 70);
-    margin-left: 100px;
-    background-color:rgb(151, 222, 233);
-    
+    background-color: rgb(151, 222, 233);
+    padding-left: 50px;
+    padding-right: 20px;
+
 
 }
 
@@ -32,14 +33,18 @@ body {
 
 img {
 
-    width: 1727px;
+    width: 2560px;
     height: 300px;
+
 }
 
 h2 {
     color: rgb(52, 68, 129);
     font-size: 50px;
     margin-left: 300px;
+    border-left: thick solid black;
+    
+    
 }
 
 p {
@@ -47,7 +52,100 @@ p {
     height: 200px;
     margin-left: 600px;
     font-size: 20px;
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, serif;
+    margin-top: -100px;
+
+
+}
+
+.nav-title {
+
+    font-size: 50px;
+    font-weight: 600;
+    padding-left: 1500px;
+
+}
+
+.container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+    
+
+
+}
+
+.box-1 {
+
+    width: 1000px;
+    height: 200px;
+    background: rgb(151, 222, 233);
+    color: rgb(66, 66, 70);
+    margin: 30px;
+    
+}
+
+.box-2 {
+
+    width: 480px;
+    height: 200px;
+    background: rgb(151, 222, 233);
+    color: rgb(66, 66, 70);
+    margin-right: 500px;
+    margin-left: -20px;
+    margin-bottom: 20px; 
+    
+     
+    
+    
+
+}
+
+.box-3 {
+
+    width: 500px;
+    height: 200px;
+    background: rgb(151, 222, 233);
+    color: rgb(66, 66, 70);
+    margin-left: 500px;
+    margin-top: -220px;
+    margin-bottom: 20px;
+    
+    
+
+}
+
+.box-4 {
+
+    width: 480px;
+    height: 200px;
+    background: rgb(151, 222, 233);
+    color: rgb(66, 66, 70);
+    margin-right: 500px;
+    margin-left: -20px;
+    margin-bottom: 20px; 
+    
+}
+
+.box-5 {
+
+    width: 500px;
+    height: 200px;
+    background: rgb(151, 222, 233);
+    color: rgb(66, 66, 70);
+    margin-left: 500px;
+    margin-top: -220px;
+    margin-bottom: 20px;
+}
+
+.contact-info {
+
+    color: rgb(255, 0, 0);
+    margin-left: 750px;
+    
     
 
 }
