--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,31 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 2570px;
+  
+}
 
+.image-container {
+
+    position: relative;
+    display: inline-block;
+
+}
+
+.overlay-text {
+
+    display: inline;
+    font-size: 100px;
+    font-weight: 600;
+    position: absolute;
+    top: 80%;
+    left: 90%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(141, 201, 210);
+    color: rgb(52, 68, 129);
+    padding: 5px;
+    font-size: 20px;
+    
 }
 
 h1 {
@@ -25,6 +49,8 @@ li {
     list-style: none;
     display: inline;
     margin-right: 50px;
+    text-decoration: underline;
+    font-size: 30px;
 }
 
 body {
@@ -33,17 +59,22 @@ body {
 
 img {
 
-    width: 2560px;
+  
+    width: 2570px;
     height: 300px;
+    display: inline-block;
+    
 
 }
 
 h2 {
     color: rgb(52, 68, 129);
-    font-size: 50px;
+    font-size: 60px;
+    font-display: vertical;
     margin-left: 300px;
-    border-left: thick solid black;
-    
+    padding: 20px;
+    border-left: thick solid  rgb(56, 56, 136);
+    padding-bottom: 100px;
     
 }
 
@@ -53,16 +84,9 @@ p {
     margin-left: 600px;
     font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
-    margin-top: -100px;
-
-
-}
-
-.nav-title {
-
-    font-size: 50px;
-    font-weight: 600;
-    padding-left: 1500px;
+    margin-top: -120px;
+    font-size: 25px;
+    
 
 }
 
@@ -73,8 +97,7 @@ p {
     flex-direction: column;
     align-items: center;
     margin: 10px;
-    
-
+    margin-top: -200px;
 
 }
 
@@ -82,9 +105,9 @@ p {
 
     width: 1000px;
     height: 200px;
-    background: rgb(151, 222, 233);
-    color: rgb(66, 66, 70);
     margin: 30px;
+    border: solid rgb(151, 222, 233);
+    border-width: 5px;
     
 }
 
@@ -97,9 +120,8 @@ p {
     margin-right: 500px;
     margin-left: -20px;
     margin-bottom: 20px; 
-    
-     
-    
+    border: solid rgb(151, 222, 233);
+    border-width: 5px;
     
 
 }
@@ -111,10 +133,10 @@ p {
     background: rgb(151, 222, 233);
     color: rgb(66, 66, 70);
     margin-left: 500px;
-    margin-top: -220px;
-    margin-bottom: 20px;
-    
-    
+    margin-top: -230px;
+    margin-bottom: 10px;
+    border: solid rgb(151, 222, 233);
+    border-width: 5px;
 
 }
 
@@ -127,6 +149,8 @@ p {
     margin-right: 500px;
     margin-left: -20px;
     margin-bottom: 20px; 
+    border: solid rgb(151, 222, 233);
+    border-width: 5px;
     
 }
 
@@ -137,15 +161,50 @@ p {
     background: rgb(151, 222, 233);
     color: rgb(66, 66, 70);
     margin-left: 500px;
-    margin-top: -220px;
+    margin-top: -230px;
     margin-bottom: 20px;
+    border: solid rgb(151, 222, 233);
+    border-width: 5px;
 }
 
-.contact-info {
 
-    color: rgb(255, 0, 0);
-    margin-left: 750px;
+
+.contact {
+    
+    margin-left: 700px;
+    margin-top: -100px;
+    text-decoration: underline;
     
     
+}
 
+.phone-number {
+
+    color: rgb(52, 68, 129);
+    font-size: 40px;
+    
+}
+
+.email {
+
+    color: rgb(52, 68, 129);
+    font-size: 40px;
+}
+
+.github {
+
+    color: rgb(52, 68, 129);
+    font-size: 40px;
+}
+
+.twitter {
+
+    color: rgb(52, 68, 129);
+    font-size: 40px;
+}
+
+.spotify {
+
+    color: rgb(52, 68, 129);
+    font-size: 40px;
 }
