--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
     width: 2570px;
-  
+
 }
 
 .image-container {
@@ -28,7 +28,7 @@
     color: rgb(52, 68, 129);
     padding: 5px;
     font-size: 20px;
-    
+
 }
 
 h1 {
@@ -55,39 +55,40 @@ li {
 
 body {
     margin: 0px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 img {
-
-  
     width: 2570px;
     height: 300px;
     display: inline-block;
-    
-
 }
 
 h2 {
+    flex: 0 0 20%;
     color: rgb(52, 68, 129);
     font-size: 60px;
     font-display: vertical;
-    margin-left: 300px;
     padding: 20px;
-    border-left: thick solid  rgb(56, 56, 136);
+    border-right: thick solid rgb(56, 56, 136);
     padding-bottom: 100px;
-    
 }
 
 p {
     color: rgb(52, 68, 129);
-    height: 200px;
-    margin-left: 600px;
-    font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
-    margin-top: -120px;
-    font-size: 25px;
-    
+}
 
+section {
+     display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: space-between;
+}
+
+section > div{
+    flex: 0 0 70%;
+    margin: 25px 0;
 }
 
 .container {
@@ -98,7 +99,6 @@ p {
     align-items: center;
     margin: 10px;
     margin-top: -200px;
-
 }
 
 .box-1 {
@@ -108,7 +108,7 @@ p {
     margin: 30px;
     border: solid rgb(151, 222, 233);
     border-width: 5px;
-    
+
 }
 
 .box-2 {
@@ -119,10 +119,10 @@ p {
     color: rgb(66, 66, 70);
     margin-right: 500px;
     margin-left: -20px;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
     border: solid rgb(151, 222, 233);
     border-width: 5px;
-    
+
 
 }
 
@@ -148,10 +148,10 @@ p {
     color: rgb(66, 66, 70);
     margin-right: 500px;
     margin-left: -20px;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
     border: solid rgb(151, 222, 233);
     border-width: 5px;
-    
+
 }
 
 .box-5 {
@@ -170,19 +170,19 @@ p {
 
 
 .contact {
-    
+
     margin-left: 700px;
     margin-top: -100px;
     text-decoration: underline;
-    
-    
+
+
 }
 
 .phone-number {
 
     color: rgb(52, 68, 129);
     font-size: 40px;
-    
+
 }
 
 .email {
