--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,7 +55,7 @@ li {
 
 body {
     margin: 0px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 img {
@@ -76,135 +76,102 @@ h2 {
 
 p {
     color: rgb(52, 68, 129);
+    font-size: 30px;
     font-family: 'Times New Roman', Times, serif;
 }
 
 section {
-     display: flex;
+    display: flex;
     flex-wrap: wrap;
     align-items: stretch;
     justify-content: space-between;
 }
 
-section > div{
+section>div {
     flex: 0 0 70%;
     margin: 25px 0;
 }
 
-.container {
-    width: 100%;
-    height: auto;
+.cards {
+
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
-    margin-top: -200px;
-}
-
-.box-1 {
-
-    width: 1000px;
-    height: 200px;
-    margin: 30px;
-    border: solid rgb(151, 222, 233);
-    border-width: 5px;
+    flex-wrap: wrap;
+    justify-content: center;
+    box-sizing: border-box;
 
 }
 
-.box-2 {
+div {
 
-    width: 480px;
-    height: 200px;
-    background: rgb(151, 222, 233);
-    color: rgb(66, 66, 70);
-    margin-right: 500px;
-    margin-left: -20px;
-    margin-bottom: 20px;
-    border: solid rgb(151, 222, 233);
-    border-width: 5px;
+    display: block;
+    unicode-bidi: isolate;
+}
+
+a {
+    width: 300px;
+    height: 10px;
+    background-color: rgb(151, 222, 233);
+    padding-bottom: 50px;
+    font-size: 25px;
+    font-weight: 200;
 
 
 }
 
-.box-3 {
+.big-card {
 
-    width: 500px;
-    height: 200px;
-    background: rgb(151, 222, 233);
-    color: rgb(66, 66, 70);
-    margin-left: 500px;
-    margin-top: -230px;
-    margin-bottom: 10px;
-    border: solid rgb(151, 222, 233);
-    border-width: 5px;
+    display: flex;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 900px;
+    line-height: 100px;
+    border: 8px solid rgb(151, 222, 233);
+    background-image: url(/assets/images/893.jpg);
+    cursor: pointer;
+    min-height: 700px;
+    max-height: 150px;
+    flex-basis: calc(80%);
+    align-items: flex-end;
+    padding: 0 0 20px 0;
+   
+    
+    
+}
+
+.big-card:hover {
+    box-shadow: black;
+    transition: 700ms;
 
 }
 
-.box-4 {
+.small-cards {
 
-    width: 480px;
-    height: 200px;
-    background: rgb(151, 222, 233);
-    color: rgb(66, 66, 70);
-    margin-right: 500px;
-    margin-left: -20px;
-    margin-bottom: 20px;
-    border: solid rgb(151, 222, 233);
-    border-width: 5px;
+    display: flex;
+    justify-content: start;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 1rem;
+    width: 100%;
+}
+
+.card {
+    border: 8px solid rgb(151, 222, 233);
+    background-color: aliceblue;
+    color: black;
+    min-height: 200px;
+    max-height: 200px;
+    flex-basis: calc(40%);
+    display: flex;
+    align-items: flex-end;
+    padding: 0 0 20px 0;
+    background: url(/assets/images/neon.jpg);
 
 }
 
-.box-5 {
+.card:hover {
 
-    width: 500px;
-    height: 200px;
-    background: rgb(151, 222, 233);
-    color: rgb(66, 66, 70);
-    margin-left: 500px;
-    margin-top: -230px;
-    margin-bottom: 20px;
-    border: solid rgb(151, 222, 233);
-    border-width: 5px;
-}
-
-
-
-.contact {
-
-    margin-left: 700px;
-    margin-top: -100px;
-    text-decoration: underline;
-
+    box-shadow: red;
+    transition: 850ms;
 
 }
 
-.phone-number {
-
-    color: rgb(52, 68, 129);
-    font-size: 40px;
-
-}
-
-.email {
-
-    color: rgb(52, 68, 129);
-    font-size: 40px;
-}
-
-.github {
-
-    color: rgb(52, 68, 129);
-    font-size: 40px;
-}
-
-.twitter {
-
-    color: rgb(52, 68, 129);
-    font-size: 40px;
-}
-
-.spotify {
-
-    color: rgb(52, 68, 129);
-    font-size: 40px;
-}
