--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,4 @@
 .navbar {
-
     background-color: rgb(66, 66, 70);
     display: flex;
     align-items: center;
@@ -8,39 +7,33 @@
 }
 
 .nav-about {
-
     background-color: rgb(66, 66, 70);
     color: aqua;
 }
 
 .nav-work {
-
     background-color: rgb(66, 66, 70);
     color: aqua;
 }
 
 .nav-contact {
-
     background-color: rgb(66, 66, 70);
     color: aqua;
 }
 
 .nav-resume {
-
     background-color: rgb(66, 66, 70);
     color: aqua;
 }
 
 .image-container {
-
     position: relative;
     display: inline-block;
 }
 
 .overlay-text {
-
-    display: inline;
-    font-size: 100px;
+    display: flex;
+    flex-wrap: wrap;
     font-weight: 600;
     position: absolute;
     top: 80%;
@@ -49,12 +42,10 @@
     color: rgb(52, 68, 129);
     padding: 5px;
     font-size: 30px;
-    margin-left: 40px;
-    
+    margin-left: 60px;
 }
 
 h1 {
-
     font-size: 50px;
     font-weight: 600;
     color: rgb(66, 66, 70);
@@ -78,9 +69,10 @@ body {
 }
 
 img {
+    display: flex;
+    flex-wrap: wrap;
     width: 2560px;
     height: 300px;
-    
 }
 
 h2 {
@@ -112,7 +104,6 @@ section>div {
 }
 
 .cards {
-
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -120,7 +111,6 @@ section>div {
 }
 
 div {
-
     display: block;
     unicode-bidi: isolate;
 }
@@ -135,7 +125,6 @@ a {
 }
 
 .big-card {
-
     display: flex;
     text-align: center;
     font-size: 20px;
@@ -154,7 +143,6 @@ a {
 }
 
 .small-cards {
-
     display: flex;
     justify-content: end;
     justify-content: space-evenly;
@@ -165,7 +153,6 @@ a {
     width: 100%;
     line-height: 90px;
     margin-left: -10px;
-
 }
 
 .card {
@@ -186,30 +173,19 @@ a {
 }
 
 footer {
-
-
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 100%;
-    width: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-left: 220px;
     margin-top: -150px;
-    margin-left: 350px;
-    word-spacing: 200px;
-
-
-
-
+    word-spacing: 50px;
+    width: 100%;
 }
 
 .number {
-
     color: rgb(52, 68, 129);
     background-color: white;
     font-size: 30px;
-
-
-
 }
 
 .email {
@@ -235,15 +211,13 @@ footer {
     color: rgb(52, 68, 129);
     background-color: white;
     font-size: 30px;
-
 }
 
+body {
+    overflow-x: hidden;
+}
 
+@media screen and (min-width: 600px) and (max-width: 900px) {
 
-@media screen and (min-width: 768px) and (max-width: 991px) {
-
-    body {
-        color: red;
-    }
-
+    
 }
