--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -217,7 +217,4 @@ body {
     overflow-x: hidden;
 }
 
-@media screen and (min-width: 618px) and (max-width: 928px) {
-
-    
-}
+@media screen and (min-width: 618px) and (max-width: 928px) {}
